--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -44,9 +44,12 @@ BR2_PACKAGE_PYTHON_READLINE=y
 BR2_PACKAGE_PYTHON_HASHLIB=y
 BR2_PACKAGE_PYTHON_NUMPY=y
 BR2_PACKAGE_PYTHON_REQUESTS=y
+BR2_PACKAGE_REDIS=y
 BR2_PACKAGE_LIBV4L=y
 BR2_PACKAGE_LIBV4L_UTILS=y
 BR2_PACKAGE_LIBMNL=y
+BR2_PACKAGE_DNSMASQ=y
+BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
