--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -55,6 +55,8 @@ BR2_PACKAGE_IW=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
 BR2_PACKAGE_INOTIFY_TOOLS=y
+BR2_PACKAGE_PYTHON_PICAMERA=y
+BR2_PACKAGE_PYTHON_REDISPY=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_NERVES_SYSTEM_NAME="nerves_system_farmbot_rpi3"
 BR2_NERVES_ADDITIONAL_IMAGE_FILES="$(NERVES_DEFCONFIG_DIR)/fwup.conf ${NERVES_DEFCONFIG_DIR}/cmdline.txt ${NERVES_DEFCONFIG_DIR}/config.txt"
